<resources>
    <string name="app_name">Gesundheitssystem</string>
    <string name="login_title">Login</string>
    <string name="login_cancel">Cancel</string>
    <string name="login_name_hint">Enter Name</string>
    <string name="login_password_hint">Password</string>
    <string name="login_attempts">Attempts Left: </string>
    <string name="login_correct">Login successful</string>
    <string name="login_fail">Login failed</string>
    <string name="snackbar">New bill</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_home">Overview</string>
    <string name="nav_bill">New bill</string>
    <string name="nav_list">Bills</string>
    <string name="nav_camera">Camera</string>
    <string name="nav_gallery">Gallery</string>
    <string name="nav_slideshow">Slideshow</string>
    <string name="nav_pmi">Private Medical Insurance</string>
    <string name="nav_complaint">Complaint</string>
    <string name="nav_info">Info</string>
    <string name="nav_tools">Tools</string>
    <string name="nav_share">Share</string>
    <string name="nav_send">Send</string>
    <string name="nav_sync">Synchronize</string>
    <string name="nav_cat_communicate">Communicate</string>
    <string name="nav_edit">Edit</string>
    <string name="periodAll">Show: All</string>
    <string name="periodYear">Show: Year</string>
    <string name="periodMonth">Show: Month</string>
    <string name="action_settings">Settings</string>
    <string name="action_save">Save</string>
    <string name="action_help">Help</string>
    <string name="action_add">Add</string>
    <string name="action_delete">Delete</string>
    <string name="tv_overview">Overview:</string>
    <string name="tv_bill">Bills:</string>
    <string name="tv_treatments">%1$d treatments: %2$c %3$.2f €</string>
    <string name="tv_medications">Medications:</string>
    <string name="tv_pieces">%1$d pieces: %2$c %3$.2f €</string>
    <string name="tv_medical_treatment">Medical treatment:</string>
    <string name="tv_difference">Difference:</string>
    <string name="tv_differenceSum">%1$.2f €</string>
    <string name="tv_total">Total:</string>
    <string name="tv_totalSum">- %1$.2f € / + %2$.2f €</string>
    <string name="tv_records">%1$d records</string>
    <string name="tv_no_bill">Currently there a no Bill items maintained</string>
    <string name="tv_edit_delete">Delete Bill</string>
    <string name="tv_edit_confirm">Confirm</string>
    <string name="tv_billnumber">Invoice Number / Document:</string>
    <string name="tv_short_billnumber">Invoice:</string>
    <string name="tv_whom">Whom:</string>
    <string name="tv_amount">Amount:</string>
    <string name="tv_refund">Refund:</string>
    <string name="tv_date">Date:</string>
    <string name="tv_kind">Type:</string>
    <string name="tv_hint_billnumber">Number</string>
    <string name="tv_hint_whom">Contact</string>
    <string name="tv_hint_amount">€</string>
    <string name="tv_bill_created">Bill record created</string>
    <string name="tv_bill_updated">Bill record updated</string>
    <string name="tv_bill_missing">Missing Bill number!</string>
    <string name="tv_bill_amount_refund">Refund could not be larger than Amount!</string>
    <string name="tv_bill_checking">Checking the data:</string>
    <string-array name="treatment_kind">
        <item>Treatment</item>
        <item>Medicament</item>
        <item>Cost estimate</item>
    </string-array>
    <string name="tv_save_changes">Save changes</string>
    <string name="tv_insured_name">Name:</string>
    <string name="tv_insured_number">Insured Number:</string>
    <string name="tv_insured_mail">Email:</string>
    <string name="tv_insured_tel">Phone:</string>
    <string name="tv_insured_Fax">Fax:</string>
    <string name="tv_insured_contact">Contact Person:</string>
    <string name="msg_chooseEmail">Choose an Email client</string>
    <string name="txt_mail_greetings">Dear Sir or Madam,</string>
    <string name="txt_mail_grettings_name">Dear %1$s</string>
    <string name="txt_insured_allowance">Allowance:</string>
    <string name="txt_insured_allowance_on">additional allowance</string>
    <string name="txt_insured_allowance_off">no additional allowance</string>
    <string name="txt_insured_deductible">Deductible in %</string>
    <string name="txt_complaint_to">To</string>
    <string name="txt_complaint_msg">Message</string>
    <string name="txt_wrong_sign">Faulty Character! %1$c</string>
    <string name="txt_missing_separator">Missing Provider Separator: .</string>
    <string name="txt_forgotten_provider">Wrong @ character!</string>
    <string name="txt_wrong_provider">Faulty Provider (.com, .de)</string>
    <string name="txt_from_date">from</string>
    <string name="txt_greetings">Best regards</string>
    <string-array name="complaint_subject">
        <item>Complaint</item>
        <item>Issue</item>
        <item>Incorrect Invoice</item>
    </string-array>
    <string-array name="complaint_to">
        <item>Private Medical Insurance</item>
        <item>Doctor</item>
    </string-array>
    <string name="txt_socket_default_ip">1</string>
    <string name="txt_socket_default_port">2</string>
    <string name="txt_settings_cat_login">Login</string>
    <string name="txt_settings_cat_server">Server</string>
    <string name="txt_settings_cat_data">Data</string>
    <string name="txt_settings_login">Authentication with the server</string>
    <string name="txt_settings_login_default">androidid</string>
    <string name="txt_settings_security_login">Application security</string>
    <string name="txt_settings_security_on">Sign up for each start</string>
    <string name="txt_settings_security_off">Without sign up</string>
    <string name="txt_settings_ip">IP</string>
    <string name="txt_settings_port">Port</string>
    <string name="txt_settings_name">Login-Name</string>
    <string name="txt_settings_password">Password:</string>
    <string name="txt_settings_ssl">Secure Socket Layer</string>
    <string name="txt_settings_ssl_on">SSL enabled</string>
    <string name="txt_settings_ssl_off">SSL disabled</string>
    <string name="txt_settings_summary">Show summary before submit</string>
    <string name="txt_settings_summary_on">Shows summary of bill</string>
    <string name="txt_settings_summary_off">No summary of Data</string>
    <string name="txt_settings_delete">Delete all data</string>
    <string name="txt_settings_delete_sure">Sure?</string>
    <string name="txt_settings_delete_cancel">Cancel</string>
    <string name="txt_settings_sum_delete">Deletes the stored content from the app</string>
    <string name="txt_settings_deleted">Deleted!</string>
    <string name="synchronize">Synchronize</string>
    <string name="synchronize_data">Synchronize data with Server!</string>
    <string name="disclaimer_title">Disclaimer</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
</resources>