<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_help"
        android:title="@string/action_help"
        android:icon="@android:drawable/ic_menu_help"
        app:showAsAction="always"
        />

    <item
        android:id="@+id/action_save"
        android:title="@string/action_save"
        android:icon="@android:drawable/ic_menu_save"
        android:visible="false"
        app:showAsAction="always"
        />

    <item
        android:id="@+id/action_delete"
        android:title="@string/action_delete"
        android:icon="@android:drawable/ic_menu_delete"
        android:visible="false"
        app:showAsAction="always"
        />
</menu>
