<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin" >

    <TextView
        android:id="@+id/tv_detail_billnumber_txt"
        android:text="@string/tv_billnumber"
        android:textColor="@color/colorPrimaryDark"
        android:paddingTop="@dimen/activity_horizontal_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/et_detail_invoice"
        android:hint="@string/tv_hint_billnumber"
        android:inputType="textVisiblePassword|textCapCharacters|textNoSuggestions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_detail_billnumber_txt"
        android:layout_centerHorizontal="true"
        android:singleLine="true" />

    <TextView
        android:id="@+id/tv_detail_whom_txt"
        android:text="@string/tv_whom"
        android:textColor="@color/colorPrimaryDark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_detail_invoice" />

    <EditText
        android:id="@+id/et_detail_whom"
        android:hint="@string/tv_hint_whom"
        android:inputType="textCapWords|textAutoComplete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_detail_whom_txt"
        android:layout_centerHorizontal="true"
        android:singleLine="true" />

    <ImageButton
        android:id="@+id/ib_detail_whom"
        android:src="@drawable/ic_person_add"
        android:contentDescription="@string/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/et_detail_invoice" />

    <TextView
        android:id="@+id/tv_detail_amount_txt"
        android:text="@string/tv_amount"
        android:textColor="@color/colorPrimaryDark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_detail_whom" />

    <EditText
        android:id="@+id/et_detail_sum"
        android:hint="@string/tv_hint_amount"
        android:inputType="numberDecimal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_detail_amount_txt"
        android:layout_centerHorizontal="true"
        android:singleLine="true" />

    <TextView
        android:id="@+id/tv_detail_refund_txt"
        android:text="@string/tv_refund"
        android:textColor="@color/colorPrimaryDark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_detail_sum" />

    <EditText
        android:id="@+id/et_detail_refund"
        android:hint="@string/tv_hint_amount"
        android:inputType="numberDecimal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_detail_refund_txt"
        android:layout_centerHorizontal="true"
        android:singleLine="true" />

    <ImageButton
        android:id="@+id/ib_detail_date"
        android:src="@android:drawable/ic_menu_today"
        android:contentDescription="@string/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/et_detail_refund" />

    <TextView
        android:id="@+id/tv_detail_date_txt"
        android:text="@string/tv_date"
        android:textColor="@color/colorPrimaryDark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_detail_refund" />

    <TextView
        android:id="@+id/tv_detail_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/tv_detail_date_txt" />

    <TextView
        android:id="@+id/tv_detail_kind"
        android:text="@string/tv_kind"
        android:textColor="@color/colorPrimaryDark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_detail_date"/>

    <Spinner
        android:id="@+id/spinner_detail_kind"
        android:entries="@array/treatment_kind"
        android:prompt="@string/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/tv_detail_kind" >
    </Spinner>

    <ImageView
        android:id="@+id/iv_detail_blob1"
        android:src="@drawable/ic_menu_camera"
        android:layout_alignParentLeft="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinner_detail_kind" />

    <ImageView
        android:id="@+id/iv_detail_blob2"
        android:src="@drawable/ic_menu_camera"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinner_detail_kind" />

    <ImageView
        android:id="@+id/iv_detail_blob3"
        android:src="@drawable/ic_menu_camera"
        android:layout_alignParentRight="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinner_detail_kind" />

    <Button
        android:id="@+id/update_bill"
        android:text="@string/tv_save_changes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>