<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_horizontal_margin" >

    <TextView
        android:id="@+id/tv_login"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/tv_appname"
        android:text="@string/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/tv_login" />

    <ImageView
        android:id="@+id/iv_Login"
        android:src="@mipmap/ic_launcher"
        android:contentDescription="@string/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/tv_appname" />

    <EditText
        android:id="@+id/et_password"
        android:hint="@string/login_password_hint"
        android:focusable="true"
        android:inputType="textPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/iv_Login"/>

    <TextView
        android:id="@+id/tv_text_attempts"
        android:text="@string/login_attempts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/et_password"/>

    <TextView
        android:id="@+id/tv_attempts"
        android:textColor="@color/colorAccent1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/tv_text_attempts"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignBottom="@+id/tv_text_attempts"
        android:layout_toEndOf="@+id/tv_login"
        android:layout_toRightOf="@+id/tv_login" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_title"
        android:id="@+id/b_login"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/tv_login"
        android:layout_toStartOf="@+id/tv_login" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_cancel"
        android:id="@+id/b_cancel"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/tv_login"
        android:layout_toEndOf="@+id/tv_login" />

</RelativeLayout>